PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, PHP 5.1.0
- Add SAPI hook to get the current request time. (Rasmus)
- Fixed bug #29522 (accessing properties without connection) (Georg)
- Fixed bug #29335 (fetch functions now use MYSQLI_BOTH as default) (Georg)
- Fixed bug #29311 (calling parent constructor in mysqli). (Georg)
- Fixed bug #29256 (SOAP HTTP Error when envelop size is more than 24345 bytes)
  (Dmitry, Wez)
- Fixed bug #29236 (memory error when wsdl-cache is enabled). (Dmitry)
- Fixed bug #29109 (SoapFault exception: [WSDL] Out of memory). (Dmitry)
- Fixed bug #29061 (soap extension segfaults). (Dmitry)
- Fixed bug #28985 (__getTypes() returning nothing on complex WSDL). (Dmitry)
- Fixed bug #28969 (Wrong data encoding of special characters). (Dmitry)
- PHP will now respect extension dependencies when initializing. (Wez)
- Added new functions:
  . array_diff_key() (Andrey)
  . array_diff_ukey() (Andrey)
  . array_intersect_key() (Christiano Duarte)
  . array_intersect_ukey() (Christiano Duarte)
  . stream_context_get_default() (Wez)
  . stream_socket_enable_crypto() (Wez)
  . DomDocumentFragment->appendXML() (Christian)
  . SimpleXMLElement->registerXPathNamespace() (Christian)
  . mysqli->client_info property (Georg)
  . inet_pton() (Sara)
  . inet_ntop() (Sara)
- Added DomDocument->recover property for parsing not well-formed
  XML Documents. (Christian)   
- Added Cursor support for MySQL 5.0.x in mysqli (Georg)
- Added proxy support to ftp wrapper via http. (Sara)
- Added MDTM support to ftp_url_stat. (Sara)
- Added zlib stream filter support. (Sara)
- Added bz2 stream filter support. (Sara)
- Added support of parameter->value arrays to xsl_xsltprocessor_set_parameter() 
  (Tony)
- Changed the implementation of TRUE, FALSE, and NULL from constants to
  keywords. (Marcus)
- Fixed bug in mysql->client_version (Georg)