@@ -1,7 +1,6 @@
 Zend Engine
 -----------
   - Look at making zend_constant value member be a zval* instead of zval. (Andi)
-  - Add the patch for referring to existing .ini vars in .ini files. (Andrei)
   - Implement inheritance rules for type hints. (Marcus) 
   - Implement typehinting for arrays (apply the patch). (Andi, Marcus)
   - Find a keyword for the if-set-or operator (apply the patch). (Marcus, all)
