@@ -153,12 +153,20 @@ NEWLINE ("\r"|"\n"|"\r\n")
 	return TC_ENCAPSULATED_STRING;
 }
 
-<INITIAL>[&|~()!] {
+<INITIAL>[&|~$(){}!] {
 	return yytext[0];
 }
 
+<INITIAL>"${" {
+	return TC_DOLLAR_CURLY;
+}
 
-<INITIAL>[^=\n\r\t;|&~()!"\[]+ {
+<INITIAL>"}" {
+	ini_lval->value.lval = (long) yytext[0];
+	return yytext[0];
+}
+
+<INITIAL>[^=\n\r\t;|&$~(){}!"\[]+ {
 	/* STRING */
 	register int i;
 
@@ -189,8 +197,6 @@ NEWLINE ("\r"|"\n"|"\r\n")
 		/* whitespace */
 	}
 }
-
-
 
 <INITIAL>[=\n] {
 	if (yytext[0] == '\n') {
